--- a/src/app/pages/single-course/single-course.component.html
+++ b/src/app/pages/single-course/single-course.component.html
@@ -19,35 +19,7 @@
           </div>
 
           <div class="col-md-6">
-            <section class="formulario">
-              <form method="POST" netlify>
-                <h3 class=" text-center titulo text-black mb-4">Solicitar Información</h3>
-                <div class=" mb-3">
-
-                  <input type="text" class="form-control" id="formGroupExampleInput" name="name" placeholder="Nombre">
-                </div>
-                <div class="mb-3">
-
-                  <input type="text" class="form-control" id="formGroupExampleInput2" name="lastname"
-                    placeholder="Apellido">
-                </div>
-                <div class="mb-3">
-
-                  <input type="text" class="form-control" id="formGroupExampleInput2" name="email" placeholder="Correo">
-                </div>
-                <div class="mb-3">
-
-                  <input type="text" class="form-control" id="formGroupExampleInput2" name="phone"
-                    placeholder="Celular">
-                </div>
-                <div class="mb-3">
-
-                  <textarea style="resize: none;" class="form-control" name="" id="" name="message" cols="30"
-                    placeholder="Déjanos tus comentarios" rows="4"></textarea>
-                </div>
-                <button class="btn btn-secondary bg_principal text-white w-100" type="submit">enviar</button>
-              </form>
-            </section>
+            <app-form></app-form>
           </div>
         </div>
       </div>
