--- a/src/styles.css
+++ b/src/styles.css
@@ -110,6 +110,10 @@ svg rect {
   padding: 1%;
 }
 
+.offcanvas {
+  height: 50vh !important;
+}
+
 @media only screen and (max-width: 575px) {
   .llama-single {
     padding: 1em !important;
