--- a/src/app/pages/teachers/teachers.component.html
+++ b/src/app/pages/teachers/teachers.component.html
@@ -9,14 +9,14 @@
     Docentes de Marketing y publicidad
   </h3>
   <div class="row">
-    <div class="animate__animated animate__fadeIn col-12  col-sm-6 col-md-6 col-lg-3 col-xl-3 "
+    <div class="animate__animated animate__fadeIn col-6  col-sm-6 col-md-6 col-lg-3 col-xl-3 "
       *ngFor="let equipo of info.info.equipoMarketingPublicidad">
       <div class="d-flex justify-content-center">
         <div class="   mb-1">
           <img src="{{equipo.url}}" class="img-fluid rounded-circle p-3" alt="">
         </div>
       </div>
-      <h6 class="text-center titulo">{{equipo.nombre}} </h6>
+      <p class="text-center titulo nombre-docente">{{equipo.nombre}} </p>
     </div>
   </div>
 </section>
@@ -25,14 +25,14 @@
     Docentes de Fotografía
   </h3>
   <div class="row">
-    <div class="animate__animated animate__fadeIn col-12  col-sm-6 col-md-6 col-lg-3 col-xl-3 "
+    <div class="animate__animated animate__fadeIn col-6  col-sm-6 col-md-6 col-lg-3 col-xl-3 "
       *ngFor="let equipo of info.info.fotografia">
       <div class="d-flex justify-content-center">
         <div class="    mb-1">
           <img src="{{equipo.url}}" class="img-fluid rounded-circle p-3" alt="">
         </div>
       </div>
-      <h6 class="text-center titulo">{{equipo.nombre}} </h6>
+      <h6 class="text-center titulo nombre-docente">{{equipo.nombre}} </h6>
     </div>
   </div>
 </section>
@@ -41,14 +41,14 @@
     Docentes de Diseño grafico y Audiovisual
   </h3>
   <div class="row">
-    <div class="animate__animated animate__fadeIn col-12  col-sm-6 col-md-6 col-lg-3 col-xl-3 "
+    <div class="animate__animated animate__fadeIn col-6  col-sm-6 col-md-6 col-lg-3 col-xl-3 "
       *ngFor="let equipo of info.info.audiovisual">
       <div class="d-flex justify-content-center">
         <div class="   mb-1">
           <img src="{{equipo.url}}" class="img-fluid rounded-circle p-3" alt="">
         </div>
       </div>
-      <h6 class="text-center titulo">{{equipo.nombre}} </h6>
+      <h6 class="text-center titulo nombre-docente">{{equipo.nombre}} </h6>
     </div>
   </div>
 </section>
@@ -57,14 +57,14 @@
     Docentes de Desarrollo web
   </h3>
   <div class="row">
-    <div class="animate__animated animate__fadeIn col-12  col-sm-6 col-md-6 col-lg-3 col-xl-3 "
+    <div class="animate__animated animate__fadeIn col-6  col-sm-6 col-md-6 col-lg-3 col-xl-3 "
       *ngFor="let equipo of info.info.desarrolloWeb">
       <div class="d-flex justify-content-center">
         <div class="    mb-1">
           <img src="{{equipo.url}}" class="img-fluid rounded-circle p-3" alt="">
         </div>
       </div>
-      <h6 class="text-center titulo">{{equipo.nombre}} </h6>
+      <h6 class="text-center titulo nombre-docente">{{equipo.nombre}} </h6>
     </div>
   </div>
 </section>
@@ -73,14 +73,14 @@
     Docentes de Coaching y Aprendizaje
   </h3>
   <div class="row">
-    <div class="animate__animated animate__fadeIn col-12  col-sm-6 col-md-6 col-lg-3 col-xl-3 "
+    <div class="animate__animated animate__fadeIn col-6  col-sm-6 col-md-6 col-lg-3 col-xl-3 "
       *ngFor="let equipo of info.info.coachingAprendizaje">
       <div class="d-flex justify-content-center">
         <div class="   mb-1">
           <img src="{{equipo.url}}" class="img-fluid rounded-circle p-3" alt="">
         </div>
       </div>
-      <h6 class="text-center titulo">{{equipo.nombre}} </h6>
+      <h6 class="text-center titulo nombre-docente mb-5">{{equipo.nombre}} </h6>
     </div>
   </div>
 </section>
