--- a/src/app/pages/single-course/single-course.component.html
+++ b/src/app/pages/single-course/single-course.component.html
@@ -5,16 +5,32 @@
       <div class="container">
         <div class="row ">
           <div class="col-md-6  ">
-            <section class="texto_curso   ">
+            <section class="texto_curso   mt-5">
               <!-- <img src="assets/{{cursoDetalle.url}}" class="img-fluid" alt="" srcset=""> -->
-              <h1 class="titulo text-white text-start ">
+              <h1 class="titulo text-white text-start ocultar_celular ">
+
                 {{cursoDetalle.nombre}}
               </h1>
-              <div class="d-flex justify-content-start">
+              <div class="d-flex justify-content-center">
+
+                <div class="titulo text-white text-center aparecer_celular texto-curso-movil w-75 ">
+                  <h1> Curso de <br></h1>
+                  <h1><strong class=" texto-curso-movil "> {{cursoDetalle.nombre}}</strong></h1>
+                </div>
+              </div>
+
+              <div class=" d-flex justify-content-start  ocultar_celular">
                 <p class=" text-justify text-white fw-bold lh-lg ">{{cursoDetalle.subtitulo}}.
                 </p>
               </div>
-
+              <div class="aparecer_celular">
+                <div class=" d-flex justify-content-center text-center">
+                  <div class=" w-75">
+                    <p class=" text-justify text-white fw-bold lh-lg ">{{cursoDetalle.subtitulo}}.
+                    </p>
+                  </div>
+                </div>
+              </div>
             </section>
           </div>
 
@@ -34,22 +50,22 @@
       <div class="col-md-6">
         <div class="p-3 aparecer_tablet"></div>
 
-        <img src="assets/img/llamas/LLAMA-DOCENTE.svg"
-          class="container animate__animated animate__fadeInLeft p-3 llama-single " alt="">
+        <img src="assets/img/llamas/LLAMA-DOCENTE.svg" class="container animate__animated animate__fadeInLeft  mb-2 "
+          width="100" height="400" alt="">
       </div>
       <div class="col-md-6 ">
         <div class="p-5 ocultar_celular espacio_tablet"></div>
-        <div class="p-3 aparecer_tablet"></div>
+        <div class="p-1 aparecer_tablet"></div>
 
         <h1 class="text-white ocultar_celular">¿Qué aprenderé en {{cursoDetalle.nombre}}?</h1>
-        <h1 class="text-white text-center aparecer_celular p-3 mb-3">¿Qué aprenderé en {{cursoDetalle.nombre}}?</h1>
+        <h1 class="text-white text-center aparecer_celular p-1 mb-3">¿Qué aprenderé en {{cursoDetalle.nombre}}?</h1>
 
         <div class="p-3 ocultar_celular "></div>
 
         <p class="text-white">
           {{cursoDetalle.descripcion}}
         </p>
-        <div class="p-3 "></div>
+        <div class="p-1 "></div>
 
       </div>
 
