--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,22 +1,110 @@
-<div class="bg-secondary p-2">
+<section class="bg-footer">
+  <nav class="container ocultar_celular ">
+    <div class="row">
+      <div class="col-6">
+        <p class="text-white address-text">
 
+          {{info.info.address}}
+        </p>
+      </div>
+      <!-- <div class="col-2"></div> -->
+      <div class="col-6">
+        <div class="row">
+          <div class="col"></div>
+          <div class="col"></div>
+          <div class="col">
+            <div class="flex-container">
+              <div>
+                <div class="d-flex">
+
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                    class="feather feather-mail mt-1 mx-1">
+                    <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
+                    <polyline points="22,6 12,13 2,6"></polyline>
+                  </svg>
+                  <div class="email-header text-white mt-2">
+                    <p>escuelay@yapaydigital.pe</p>
+                  </div>
+                </div>
+              </div>
+              <div>
+                <div class="container-social">
+                  <a href="https://www.facebook.com/YapayAgenciaDigital" target="_blank">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                      stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                      class="feather feather-facebook">
+                      <path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path>
+                    </svg>
+                  </a>
+                </div>
+              </div>
+              <div>
+                <div class="container-social">
+                  <a href="https://www.facebook.com/YapayAgenciaDigital" target="_blank">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                      stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                      class="feather feather-instagram">
+                      <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
+                      <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
+                      <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line>
+                    </svg>
+                  </a>
+                </div>
+              </div>
+              <div>
+                <div class="container-social">
+                  <a href="https://www.facebook.com/YapayAgenciaDigital" target="_blank">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                      stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                      class="feather feather-youtube">
+                      <path
+                        d="M22.54 6.42a2.78 2.78 0 0 0-1.94-2C18.88 4 12 4 12 4s-6.88 0-8.6.46a2.78 2.78 0 0 0-1.94 2A29 29 0 0 0 1 11.75a29 29 0 0 0 .46 5.33A2.78 2.78 0 0 0 3.4 19c1.72.46 8.6.46 8.6.46s6.88 0 8.6-.46a2.78 2.78 0 0 0 1.94-2 29 29 0 0 0 .46-5.25 29 29 0 0 0-.46-5.33z">
+                      </path>
+                      <polygon points="9.75 15.02 15.5 11.75 9.75 8.48 9.75 15.02"></polygon>
+                    </svg>
+                  </a>
+                </div>
+              </div>
+              <div>
+                <div class="container-social">
+                  <a href="https://www.facebook.com/YapayAgenciaDigital" target="_blank">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                      stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                      class="feather feather-linkedin">
+                      <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
+                      <rect x="2" y="9" width="4" height="12"></rect>
+                      <circle cx="4" cy="4" r="2"></circle>
+                    </svg>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </nav>
+</section>
+<div class="bg-secondary p-1">
+  <div class=" text-center text-white">
+    <p class="mt-3">
+
+      Copyright © 2020 – Agencia Digital Yapay | Todos los derechos
+      reservados.
+    </p>
+  </div>
+</div>
+<!-- <div class="bg-secondary ">
   <ul class="nav justify-content-end container bg-secondary">
-    <!-- <li class="nav-item">
-      <a class="nav-link disabled text-white mx-5"> {{info.info.powered}}
 
-      </a>
-    </li> -->
     <li class="nav-item">
       <a class="nav-link disabled text-white mx-5">Copyright © 2020 – Agencia Digital Yapay | Todos los derechos
         reservados.
-
       </a>
     </li>
     <li class="nav-item">
       <a class="nav-link disabled text-white mx-5" aria-current="page" href="#">{{info.info.address}}</a>
     </li>
-
-
-
   </ul>
-</div>
+</div> -->
