--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -42,6 +42,51 @@ input[type="search"]::-webkit-search-results-decoration {
   }
 }
 
+
+.flex-container {
+  display: flex;
+}
+
+.flex-container>div {
+  width: fit-content;
+  margin: 10px;
+  margin-top: 50px;
+  text-align: center;
+  line-height: 15px;
+  font-size: 10px;
+}
+
+.container-social {
+  background-color: #00849D;
+  padding: 5px;
+  border-radius: 4px;
+}
+
+.container-social:hover {
+  background-color: #0e6070;
+  cursor: pointer;
+}
+
+.feather-facebook {
+  color: white;
+}
+
+.feather-instagram {
+  color: white;
+}
+
+.feather-youtube {
+  color: white;
+}
+
+.feather-linkedin {
+  color: white;
+}
+
+.email-header {
+  font-size: 16px;
+}
+
 @media only screen and (max-width: 575px) {
   ::-webkit-input-placeholder {
     text-align: center;
@@ -54,16 +99,4 @@ input[type="search"]::-webkit-search-results-decoration {
   :-moz-placeholder {
     text-align: center;
   }
-}
-
-.flex-container {
-  display: flex;
-}
-
-.flex-container>div {
-  width: 40px;
-  margin: 10px;
-  text-align: center;
-  line-height: 85px;
-  font-size: 10px;
 }
