--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,67 +1,78 @@
-<!-- <ul class="nav justify-content-end container-fluid mt-1 mb-1 ocultar_celular">
-  <li class="nav-item">
-    <a class="nav-link active" aria-current="page" href="#"> <a
-        class="navbar-brand   animate__animated animate__jackInTheBox " routerLink="home"><img class="logo mx-5"
-          src="/assets/img/logo.png" width="220" alt=""> </a></a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#"></a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link text-decoration-none text-muted" target="_blank"> <img width="15" class="mb-0"
-        src="/assets/feather/mail.svg" alt="" srcset="">
-      {{info.info.email}}</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link text-decoration-none text-muted" target="_blank" href="{{info.info.urlWhatsApp}}"> <img
-        width="15" class="mb-1" src="/assets/feather/phone.svg" alt="" srcset="">
-      {{info.info.celular}}</a>
-  </li>
-</ul> -->
-
 <nav class="container-fluid ocultar_celular ">
-
   <div class="row">
     <div class="col-4"> <a class="nav-link active" aria-current="page" href="#"> <a
           class="navbar-brand   animate__animated animate__jackInTheBox " routerLink="home"><img class="logo p-3 mx-5"
             src="/assets/img/logo.png" width="220" alt=""> </a></a></div>
-    <div class="col-4"></div>
-
-    <div class="col-4">
+    <!-- <div class="col-2"></div> -->
+    <div class="col-8">
       <div class="row">
         <div class="col"></div>
         <div class="col"></div>
         <div class="col">
-
-
           <div class="flex-container">
-            <div> <a href="https://www.facebook.com/YapayAgenciaDigital" target="_blank">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                  stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                  class="feather feather-facebook">
-                  <path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path>
-                </svg>
-
-              </a>
-
+            <div class="head-email">
+              <div class="d-flex">
+                <img src="/assets/feather/mail.svg" class="mb-1" alt="">
+                <div class="email-header mt-2">
+                  <p>escuelay@yapaydigital.pe</p>
+                </div>
+              </div>
             </div>
-            <div> <a href="https://www.instagram.com/yapaydigital.pe/" target="_blank">
-                <img src="/assets/feather/instagram.svg" class="social-icons-in" alt="">
-              </a></div>
-            <div> <a href="https://www.youtube.com/channel/UC2KALoJzrXvqnS_kb2uZ_yg" target="_blank">
-                <img src="/assets/feather/youtube.svg" class="social-icons-yt" alt="">
-              </a></div>
-            <div> <a href="https://www.linkedin.com/company/yapay-agencia-digital/" target="_blank">
-                <img src="/assets/feather/linkedin.svg" class="social-icons-li" alt="">
-              </a></div>
+            <div>
+              <div class="container-social">
+                <a href="https://www.facebook.com/YapayAgenciaDigital" target="_blank">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                    class="feather feather-facebook">
+                    <path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path>
+                  </svg>
+                </a>
+              </div>
+            </div>
+            <div>
+              <div class="container-social">
+                <a href="https://www.facebook.com/YapayAgenciaDigital" target="_blank">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                    class="feather feather-instagram">
+                    <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
+                    <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
+                    <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line>
+                  </svg>
+                </a>
+              </div>
+            </div>
+            <div>
+              <div class="container-social">
+                <a href="https://www.facebook.com/YapayAgenciaDigital" target="_blank">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                    class="feather feather-youtube">
+                    <path
+                      d="M22.54 6.42a2.78 2.78 0 0 0-1.94-2C18.88 4 12 4 12 4s-6.88 0-8.6.46a2.78 2.78 0 0 0-1.94 2A29 29 0 0 0 1 11.75a29 29 0 0 0 .46 5.33A2.78 2.78 0 0 0 3.4 19c1.72.46 8.6.46 8.6.46s6.88 0 8.6-.46a2.78 2.78 0 0 0 1.94-2 29 29 0 0 0 .46-5.25 29 29 0 0 0-.46-5.33z">
+                    </path>
+                    <polygon points="9.75 15.02 15.5 11.75 9.75 8.48 9.75 15.02"></polygon>
+                  </svg>
+                </a>
+              </div>
+            </div>
+            <div>
+              <div class="container-social">
+                <a href="https://www.facebook.com/YapayAgenciaDigital" target="_blank">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                    class="feather feather-linkedin">
+                    <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
+                    <rect x="2" y="9" width="4" height="12"></rect>
+                    <circle cx="4" cy="4" r="2"></circle>
+                  </svg>
+                </a>
+              </div>
+            </div>
           </div>
-
-
         </div>
-
       </div>
     </div>
-
   </div>
 </nav>
 <nav class="navbar navbar-expand-lg bg_principal  fixed-top aparecer_celular  ">
