--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700;900&display=swap');
 
 * {
-  font-family: 'Montserrat', sans-serif;
+  /* font-family: 'Montserrat', sans-serif; */
+
   transition: ease-in-out !important;
   transition-duration: 0.2s !important;
   scroll-behavior: smooth;
@@ -26,10 +27,7 @@ nav {
   color: #00849D;
 }
 
-svg path,
-svg rect {
-  fill: black;
-}
+
 
 .cursoDetalle {
   height: 37em;
@@ -112,6 +110,8 @@ svg rect {
   height: 48vh !important;
 }
 
+
+
 @media only screen and (max-width: 575px) {
   .llama-single {
     padding: 1em !important;
@@ -174,6 +174,10 @@ svg rect {
 
   .espacio_tablet {
     display: none;
+  }
+
+  .head-email {
+    display: none
   }
 
   .aparecer_tablet {
