--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -155,6 +155,9 @@
           <a class="nav-link  mx-3 text-white" routerLink="docentes">Docentes</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link  mx-3 text-white" routerLink="paquetes">Paquetes</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link  mx-3 text-white" target="_blank" href="https://yapaydigital.pe/">Agencia digital</a>
         </li>
         <li class="nav-item">
