--- a/src/app/pages/courses/courses.component.html
+++ b/src/app/pages/courses/courses.component.html
@@ -11,10 +11,7 @@
       </div>
     </div>
   </div>
-</div>
-
-
-<div class="container">
+  <!--CARGANDO-->
   <div align="center" class="mt-5" *ngIf="coursesService.cargando">
     <h2 class="mt-5 titulo">Cargando todos los cursos...</h2>
     <i><img src="/favicon.ico" alt="" srcset=""></i>
@@ -37,6 +34,11 @@
     <p class="titulo">Espere por favor</p>
 
   </div>
+  <!--CARGANDO-->
+</div>
+
+<div class="container">
+
 
   <div class="row ">
     <div class="col-md-4">
