--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,5 +1,5 @@
 <section class="bg-footer">
-  <nav class="container ocultar_celular ">
+  <nav class="container ocultar_celular ocultar_tablet ">
     <div class="row">
       <div class="col-6">
         <p class="text-white address-text">
@@ -86,8 +86,8 @@
     </div>
   </nav>
 </section>
-<div class="bg-secondary p-1">
-  <div class=" text-center text-white">
+<div class="bg-secondary p-1 ">
+  <div class=" text-center text-white ">
     <p class="mt-3">
 
       Copyright © 2020 – Agencia Digital Yapay | Todos los derechos
