--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -72,5 +72,7 @@
   </div>
   <div class="p-2 mt-5 ocultar_celular"></div>
 </section>
-
+<h1 class="titulo  text-center  mt-5">
+  Paquetes de estudio
+</h1>
 <app-packs></app-packs>
