--- a/src/app/pages/teachers/teachers.component.html
+++ b/src/app/pages/teachers/teachers.component.html
@@ -1,8 +1,10 @@
-<div class="h1 text-center mt-5 titulo">Nuestros docentes</div>
+<div class="h1 text-center mt-3 titulo ocultar_celular">Nuestros docentes</div>
+<div class="h1 text-center mt-5 titulo aparecer_celular">Nuestros docentes</div>
 <div class="text-center mb-3">
-  <h4 class="lh-lg h5 mb-4">Todo nuestro equipo de docentes son profesionales activos
-  </h4>
+  <h6 class="lh-sm h5 mb-5">Todo nuestro equipo de docentes son profesionales activos
+  </h6>
 </div>
+
 
 <section class="container">
   <h3 class="titulo mb-3">
