--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -98,10 +98,11 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link  mx-3 text-white text-center nav-hover" routerLink="docentes">Docentes</a>
+          <a class="nav-link  mx-3 text-white text-center nav-hover"
+            routerLink="paquetes/{{info.info.name}}">Paquetes</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link  mx-3 text-white" routerLink="paquetes">Paquetes</a>
+          <a class="nav-link  mx-3 text-white text-center nav-hover" routerLink="docentes">Docentes</a>
         </li>
         <li class="nav-item">
           <a class="nav-link  mx-3 text-white text-center nav-hover" target="_blank"
@@ -155,10 +156,10 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link  mx-3 text-white" routerLink="docentes">Docentes</a>
+          <a class="nav-link  mx-3 text-white" routerLink="paquetes/{{info.info.name}}">Paquetes</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link  mx-3 text-white" routerLink="paquetes">Paquetes</a>
+          <a class="nav-link  mx-3 text-white" routerLink="docentes">Docentes</a>
         </li>
         <li class="nav-item">
           <a class="nav-link  mx-3 text-white" target="_blank" href="https://yapaydigital.pe/">Agencia digital</a>
