--- a/src/app/pages/courses/courses.component.html
+++ b/src/app/pages/courses/courses.component.html
@@ -1,3 +1,5 @@
+<div class="p-4 aparecer_celular"></div>
+
 <div class="display-6 text-center mt-3 titulo">Cursos online y presenciales</div>
 <div class="text-center mb-3 mt-2">
   <h6 class="lh-lg">Conoce a detalle cada uno de nuestros cursos
